added conditional statements

--- a/main.ipynb
+++ b/main.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "53538ce7",
    "metadata": {},
    "outputs": [
@@ -175,6 +175,272 @@
    "source": [
     "text2 =\"I like music\"\n",
     "print(text2.replace(\"music\", \"art\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6504f606",
+   "metadata": {},
+   "source": [
+    "# Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ffcf68",
+   "metadata": {},
+   "source": [
+    "Integers (Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9bd8b055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\n",
+      "17\n",
+      "3\n",
+      "70\n",
+      "1.4285714285714286\n",
+      "1\n",
+      "3\n",
+      "10000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# can be positive, negative or zero\n",
+    "\n",
+    "num1 = 20\n",
+    "num2 = -25\n",
+    "num3 = 10**100\n",
+    "print(type(num1))\n",
+    "print(type(num2))\n",
+    "print(num3)\n",
+    "\n",
+    "a = 10\n",
+    "b = 7\n",
+    "\n",
+    "print(a + b)  # Addition\n",
+    "print(a - b)  # Subtraction\n",
+    "print(a * b)  # Multiplication\n",
+    "print(a / b)  # Division (float)\n",
+    "print(a // b) # Floor Division\n",
+    "print(a % b)  # Modulus\n",
+    "print(a ** b) # Exponentiation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00bae4af",
+   "metadata": {},
+   "source": [
+    "float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8c9c59fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1200.0\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "0.30000000000000004\n",
+      "0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi =3.1415\n",
+    "val = -2.5\n",
+    "sci =1.2e3  # 1.2 x 10^3 = 1200.0\n",
+    "\n",
+    "print(sci)\n",
+    "print(type(pi))\n",
+    "print(type(val))\n",
+    "\n",
+    "print(0.1 + 0.2)\n",
+    "from decimal import Decimal\n",
+    "print(Decimal('0.1') + Decimal('0.2'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992888e7",
+   "metadata": {},
+   "source": [
+    "# None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5affe707",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'NoneType'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = None\n",
+    "print(b)\n",
+    "print(type(b))\n",
+    "b = 5\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "742e57c8",
+   "metadata": {},
+   "source": [
+    "# Conditional Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0345f622",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a Minor.\n",
+      "9 is Odd.\n",
+      "Less or Equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 17\n",
+    "if age >= 18:\n",
+    "    print(\"You are an Adult.\")\n",
+    "else:\n",
+    "    print(\"You are a Minor.\")\n",
+    "\n",
+    "num = 9\n",
+    "if num % 2==0:\n",
+    "    print(f\"{num} is Even.\")        \n",
+    "    \n",
+    "else:\n",
+    "    print(f\"{num} is Odd.\")\n",
+    "    \n",
+    "num = 4\n",
+    "if num > 5:\n",
+    "    print(\"Greater\")\n",
+    "else:\n",
+    "    print(\"Less or Equal\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "26b5ef04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade: C\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 76\n",
+    "\n",
+    "if score >= 90:\n",
+    "    print(\"Grade: A\")\n",
+    "elif score >= 80:\n",
+    "    print(\"Grade: B\")\n",
+    "elif score >= 70:\n",
+    "    print(\"Grade: C\")\n",
+    "else:\n",
+    "    print(\"Grade: F\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bc281330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"Enter your score: \"))    #Get user input/ prompt\n",
+    "\n",
+    "if score >= 90:\n",
+    "    print(\"Grade: A\")\n",
+    "elif score >= 80:\n",
+    "    print(\"Grade: B\")\n",
+    "elif score >= 70:\n",
+    "    print(\"Grade: C\")\n",
+    "else:\n",
+    "    print(\"Grade: F\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671a0c4f",
+   "metadata": {},
+   "source": [
+    "Nested if statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e96e7efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " positive even number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 8\n",
+    "if x > 0:\n",
+    "    if x % 2 == 0:\n",
+    "        print(\" positive even number.\")\n",
+    "    else:\n",
+    "        print(\" positive odd number.\")\n",
+    "else:\n",
+    "    print(\"Negative number or zero.\")"
    ]
   }
  ],
