--- a/main.ipynb
+++ b/main.ipynb
@@ -442,6 +442,132 @@
     "else:\n",
     "    print(\"Negative number or zero.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7dcb78fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is less than y.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 17\n",
+    "\n",
+    "if x == y:\n",
+    "    print(\"x is equal to y.\")\n",
+    "elif x > y:\n",
+    "    print(\"x is greater than y.\")\n",
+    "else:\n",
+    "    print(\"x is less than y.\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f7482b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "large\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter value:\"))\n",
+    "\n",
+    "if x < 2:\n",
+    "    print(\"small\")\n",
+    "elif x < 10:\n",
+    "    print(\"medium\")\n",
+    "else:\n",
+    "    print(\"large\")\n",
+    "      \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bb832a33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter value:\"))\n",
+    "\n",
+    "if x < 0:\n",
+    "    print(\"negative\")\n",
+    "elif x < 2:\n",
+    "    print(\"small\")\n",
+    "elif x < 10:\n",
+    "    print(\"medium\")\n",
+    "elif x < 20:\n",
+    "    print(\"big\")\n",
+    "elif x < 50:\n",
+    "    print(\"large\")  \n",
+    "elif x < 100:\n",
+    "    print(\"huge\")\n",
+    "else:\n",
+    "    print(\"giant\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc3a9a03",
+   "metadata": {},
+   "source": [
+    "# Loops and Iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b059f8d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 7\n",
+    "x = x +1\n",
+    "print(x)\n",
+    "\n",
+    "n = 5\n",
+    "while n > 0:\n",
+    "    print(n)\n",
+    "    n = n -1\n",
+    "    \n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
